--- a/client/static/CSS/style.css
+++ b/client/static/CSS/style.css
@@ -1,10 +1,12 @@
-/*#container {
-	background-color: black;
-}*/
+#container {
+	padding: 20px 0px;
+	background-image: url("../img/background.jpg");
+	background-position: -180px -70px;
+}
 
 #top_hand, #my_hand, #left_hand, #right_hand {
 	border-radius: 25px;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	box-shadow: 0 4px 8px 5px rgba(255,255,255,0.2), 0 6px 20px 5px rgba(255,255,255,0.19);
 	position: relative;
 	padding: 0px 15px;
 }
@@ -16,10 +18,6 @@
 
 #top_hand, #my_hand, #player, #wrong_msg, #msg_block {
 	margin-left: 337px;
-}
-
-#top_hand {
-	margin-top: 20px;
 }
 
 #mid_container {
@@ -38,10 +36,15 @@
 		display: inline-block;
 	}
 		#game_msg {
+			color: lightgrey;
 			height: 180px;
 			padding: 0px 15px;
 			overflow: hidden;
 		}
+			#turn_timer {
+				width: 140px;
+				margin: 0px auto;
+			}
 			.winners {
 				margin: 0px;
 			}
@@ -56,6 +59,10 @@
 			height: 140px;
 			position: relative;
 		}
+
+#my_hand button{
+	margin: 10px 5px;
+}
 
 .prev, .played, .cards, .top, .left, .right, .deck_t, .deck_l, .deck_r, .deck_b {
 	width: 100px;
@@ -89,12 +96,15 @@
 	}
 
 #player, #wrong_msg {
+	color: lightgrey;
 	width: 675px;
 } 
 
 #msg_block {
+	color: lightgrey;
 	margin-top: 20px;
-	outline: 1px solid black;
+	padding: 5px;
+	outline: 1px solid lightgrey;
 	height: 100px;
 	overflow-y: auto;
 }
